--- a/Crocodile/Screens/ScoreScreen/ScoreScreen.storyboard
+++ b/Crocodile/Screens/ScoreScreen/ScoreScreen.storyboard
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Score View Controller-->
+        <!--Рейтинг-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="ScoreViewController" customModule="Crocodile" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ScoreScreenViewController" id="Y6W-OH-hqX" customClass="ScoreScreenViewController" customModule="Crocodile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,37 +21,62 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="749"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="playersCell" rowHeight="72" id="r3l-Ay-pss">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="72"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="playerCell" id="r3l-Ay-pss" customClass="ScoreTableViewCell" customModule="Crocodile" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="46.333332061767578"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r3l-Ay-pss" id="LFb-QB-65p">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="72"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="46.333332061767578"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="nameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gde-bQ-GWK">
+                                                    <rect key="frame" x="19.999999999999986" y="10.999999999999998" width="248.66666666666663" height="24.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="scoreLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xlo-I0-Kbp">
+                                                    <rect key="frame" x="276.66666666666669" y="10.999999999999998" width="96.333333333333314" height="24.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Xlo-I0-Kbp" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="LFb-QB-65p" secondAttribute="leading" constant="20" symbolic="YES" id="RBB-mu-aOP"/>
+                                                <constraint firstItem="Xlo-I0-Kbp" firstAttribute="leading" secondItem="Gde-bQ-GWK" secondAttribute="trailing" constant="8" symbolic="YES" id="Rsd-JC-1gB"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Gde-bQ-GWK" secondAttribute="bottom" id="UKB-eM-xQ9"/>
+                                                <constraint firstItem="Xlo-I0-Kbp" firstAttribute="top" secondItem="LFb-QB-65p" secondAttribute="topMargin" id="lbQ-8P-Q1T"/>
+                                                <constraint firstItem="Gde-bQ-GWK" firstAttribute="leading" secondItem="LFb-QB-65p" secondAttribute="leadingMargin" id="rrZ-KT-nzj"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Xlo-I0-Kbp" secondAttribute="bottom" id="s5c-9c-QHI"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Xlo-I0-Kbp" secondAttribute="trailing" id="tOU-Yv-TEg"/>
+                                                <constraint firstItem="Gde-bQ-GWK" firstAttribute="top" secondItem="LFb-QB-65p" secondAttribute="topMargin" id="tXE-d2-6H5"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="playerNameLabel" destination="Gde-bQ-GWK" id="waC-yT-TEm"/>
+                                            <outlet property="playerScoreLabel" destination="Xlo-I0-Kbp" id="H3E-7i-0iQ"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="ToQ-cD-i4X"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="kOA-7C-rUH"/>
+                                </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7xr-jU-lBC">
-                                <rect key="frame" x="59" y="737" width="275" height="59.666666666666629"/>
-                                <color key="backgroundColor" red="0.85098039219999999" green="0.61176470589999998" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="7xr-jU-lBC" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="0OX-E3-XRl"/>
-                            <constraint firstItem="7xr-jU-lBC" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.07" id="24X-7c-uAL"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="2kH-WE-8Fo" secondAttribute="trailing" id="2rf-bq-lIo"/>
-                            <constraint firstItem="7xr-jU-lBC" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" multiplier="0.7" id="9J7-H8-hRM"/>
                             <constraint firstAttribute="bottom" secondItem="2kH-WE-8Fo" secondAttribute="bottom" id="V78-66-rWC"/>
-                            <constraint firstItem="7xr-jU-lBC" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" multiplier="1.8" id="jnk-nr-NoH"/>
                             <constraint firstItem="2kH-WE-8Fo" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="wQd-rg-TfY"/>
                             <constraint firstItem="2kH-WE-8Fo" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="wVL-Fv-XN7"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="9ef-Q3-oUq"/>
+                    <navigationItem key="navigationItem" title="Рейтинг" id="9ef-Q3-oUq"/>
+                    <connections>
+                        <outlet property="playersScoreTableView" destination="2kH-WE-8Fo" id="qiv-Pe-BYi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
